<resources>
    <string name="app_name">Sand Demo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="configure_stream">Configure Stream</string>
    <string name="user_name_cant_be_null">User name can\'t be null.</string>
    <string name="password_cant_be_null">Password can\'t be null.</string>
    <string name="confirm_password_cant_be_null">Confirm password can\'t be null.</string>
    <string name="password_not_equal_to_confirm_password">Password doesn\'t equal to confirm password.</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="enable_tls">Enable TLS</string>
    <string name="ok">OK</string>
    <string name="stream_config_default_host" translatable="false">120.78.128.21</string>
    <string name="stream_config_default_port" translatable="false">5222</string>
    <string name="stream_config_default_enable_tls" translatable="false">false</string>
    <string name="host_cant_be_null">Host can\'t be null.</string>
    <string name="host_must_be_an_ipv4_address">Host must be a valid IPv4 address.</string>
    <string name="port_cant_be_null">Port can\'t be null.</string>
    <string name="port_must_be_an_positive_integer">Port must be a positive integer.</string>
    <string name="app_preferences_name" translatable="false">app-preferences</string>
    <string name="stream_config_host" translatable="false">stream-config-host</string>
    <string name="stream_config_port" translatable="false">stream-config-port</string>
    <string name="stream_config_enable_tls" translatable="false">stream-config-enable-tls</string>
    <string name="user_name_has_existed">User name %s has already existed. Please change your user name.</string>
    <string name="invalid_user_name">Invalid user name. Please change your user name.</string>
    <string name="ibr_not_supported">Can\'t register. IBR protocol not be supported.</string>
    <string name="network_error">Network error. Please try later.</string>
    <string name="unknown_error">Unknown error: %s. Please contact the developer.</string>
    <string name="user_has_registered">User has already registered.</string>
    <string name="incorrect_user_name_or_password">Incorrect user name or password.</string>
    <string name="file_name_user_data_properties" translatable="false">user-data.properties</string>
    <string name="authorize_thing">Authorize Thing</string>
    <string name="retrieving_your_things">Retrieving your things. Please wait....</string>
    <string name="updating_your_things">Updating your things. Please wait....</string>
    <string name="logout">Logout</string>
    <string name="auto_login" translatable="false">auto-login</string>
    <string name="can_not_connect_to_internet">Can not connect to internet. You needs to grant permission to connect to internet first for running app correctly.</string>
    <string name="thing_has_authorized">Thing which\'s ID is %s has authorized successfully.</string>
    <string name="failed_to_authorize_thing">Failed to authorize thing. Error is: %s.</string>
    <string name="failed_to_confirm_node_addition">Failed to confirm node addition. Error is: %s.</string>
    <string name="failed_to_approve_follow">Failed to approve follow. Error is: %s.</string>
    <string name="stream_error_occurred">Stream error %s occurred. Please contact the developer.</string>
    <string name="stanza_error_occurred">Stanza error %s occurred. Please contact the developer.</string>
    <string name="retrieve_authorized_things_timeout">Retrieve authorized things timeout. You can refresh your Things by selecting \'Refresh Things\' menu.</string>
    <string name="no_authorized_things_received">没有收到任何智能物件.</string>
    <string name="refresh_things">Refresh Things</string>
    <string name="things_has_updated">Things has updated.</string>
    <string name="control_the_thing">Control the thing</string>
    <string name="failed_to_download_media">Failed to download media</string>
    <string name="yes_authorize_it">Yes, authorize it</string>
    <string name="yes_refresh_things">Yes, refresh things</string>
    <string name="yes_reset_it">Yes, reset it</string>
    <string name="yes_remove_it">Yes, remove it</string>
    <string name="yes_confirm_it">Yes, confirm it</string>
    <string name="yes_follow_it">Yes, follow it</string>
    <string name="watch_state">Watch State</string>
</resources>
